CB-24802 FMS get rid of unnecessary SecurityGroup/SecurityRule fetching
During Stack to CloudStack conversion (every flow step) we fetch the SecurityRule again with the SecurityGroup.
This fetching is not required as it already present in the InstanceGroup.
Also mode SG fetching Lazy in SR as it's not really used.